# fibora

./: CNAME  Cargo.toml  README.md  readme.md
.github/: codecov.yml
.github/workflows/: build.yaml  cd.yaml
crates/fibora/: Cargo.toml
crates/fibora/src/: lib.rs  main.rs
example/: Cargo.toml
example/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
src/: fibora.rs  main.rs
