[package]
name = "fibora"
version = "1.0.0"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
description = "Fibonnaci Utilities and CLI Tool."
readme = "README.md"
homepage = "https://github.com/UltiRequiem/fibora"
repository = "https://github.com/UltiRequiem/fibora"
keywords = ["cli", "fibonnaci"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.4"
