[package]
name = "fibora"
version = "1.1.0"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
description = "Fibonnaci Utilities and CLI Tool."
readme = "README.md"
homepage = "https://github.com/UltiRequiem/fibora"
repository = "https://github.com/UltiRequiem/fibora"
keywords = ["cli", "fibonnaci"]
categories = ["command-line-utilities"]
edition = "2018"

[[bin]]
name = "fibora"
path = "src/main.rs"
required-features = ["binaries"]

[dependencies]
clap = { version = "3.0.0-beta.4", optional = true }

[features]
binaries = ["docopt"]
